--- a/louvor-front/package.json
+++ b/louvor-front/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "react": "19",
-    "react-dom": "19"
+    "react-dom": "19",
+    "react-spinners": "^0.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/jwt-simple": "^0.5.36",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
@@ -23,6 +25,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "jose": "^5.9.6",
     "miragejs": "^0.1.48",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
