--- a/louvor-front/package.json
+++ b/louvor-front/package.json
@@ -18,17 +18,22 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
-    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
     "react": "19",
+    "react-day-picker": "8.10.1",
     "react-dom": "19",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.3",
@@ -39,7 +44,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/jest": "^29.5.14",
     "@types/jwt-simple": "^0.5.36",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^22.10.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
