--- a/louvor-front/package.json
+++ b/louvor-front/package.json
@@ -31,13 +31,14 @@
     "embla-carousel-react": "^8.5.2",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.473.0",
+    "lucide-react": "^0.474.0",
     "react": "19",
     "react-day-picker": "8.10.1",
     "react-dom": "19",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.3",
     "react-spinners": "^0.15.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
