--- a/.github/workflows/gh-deploy.yml
+++ b/.github/workflows/gh-deploy.yml
@@ -29,7 +29,7 @@ jobs:
         uses: borales/actions-yarn@v4
         with:
           dir: louvor-front
-          cmd: build:prod # will run `yarn build:prod` command
+          cmd: build
 
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@main
